--- a/cases/function/ddl/test_create_index.yaml
+++ b/cases/function/ddl/test_create_index.yaml
@@ -24,9 +24,22 @@ cases:
         indexs: ["index1:c1:c4"]
         rows:
           - [aa,1,1590738990000,1590738989000]
-    sql: CREATE INDEX index1 ON {0} (c2) OPTIONS (ts=c4, ttl=100, ttl_type=absolute);
+    sqls:
+      - CREATE INDEX index1 ON {0} (c2) OPTIONS (ts=c4, ttl=100, ttl_type=absolute);
+      - desc {0};
     expect:
       success: true
+      idxs:
+        -
+          keys: ["c1"]
+          ts: "c4"
+          ttl: 0min
+          ttlType: kAbsoluteTime
+        -
+          keys: ["c2"]
+          ts: "c4"
+          ttl: 100min
+          ttlType: kAbsoluteTime
   -
     id: 1
     desc: 指定多个列
