--- a/.github/workflows/openmldb-docker.yml
+++ b/.github/workflows/openmldb-docker.yml
@@ -92,7 +92,7 @@ jobs:
         with:
           context: demo/predict-taxi-trip-duration-nb
           push: ${{ env.PUSH }}
-          platforms: linux/amd64,linux/arm64
+          platforms: linux/amd64
           tags: |
             ${{ env.GHCR_TAG }}
             ${{ env.DOCKERHUB_TAG }}
