--- a/cases/function/window/test_window_row_range.yaml
+++ b/cases/function/window/test_window_row_range.yaml
@@ -214,7 +214,7 @@ cases:
         - [ 5,"ee",34,1 ]
   - id: 8-2
     desc: int为order by-未命中TS
-    mode: rtidb-unsupport
+    mode: rtidb-unsupport,cli-unsupport
     inputs:
       - columns: [ "id int","c1 string","c3 int","c4 bigint","c5 float","c6 double","c7 timestamp","c8 date" ]
         indexs: [ "index1:c8:c7" ]
@@ -259,7 +259,7 @@ cases:
         - [ 5,"ee",34,1 ]
   - id: 8-4
     desc: int为order by-加单位-未命中索引
-    mode: rtidb-unsupport
+    mode: rtidb-unsupport,cli-unsupport
     inputs:
       - columns: [ "id int","c1 string","c3 int","c4 bigint","c5 float","c6 double","c7 timestamp","c8 date" ]
         indexs: [ "index1:c1:c7" ]
@@ -596,6 +596,7 @@ cases:
         - [ 5,"ee",21,34 ]
   - id: 22
     desc: window的计算结果不使用别名
+    mode: cli-unsupport
     inputs:
       - columns: [ "id int","c1 string","c3 int","c4 bigint","c5 float","c6 double","c7 timestamp","c8 date" ]
         indexs: [ "index1:c3:c7" ]
