--- a/cases/function/cluster/test_window_row.yaml
+++ b/cases/function/cluster/test_window_row.yaml
@@ -196,7 +196,7 @@ cases:
         - [ 2, "aa", 4.0, 1590738993000, 400001, 2 ]
   - id: 5
     desc: 简单rows window, union副表, 主表不进入窗口3 40w
-    mode: batch-request-unsupport, rtidb-batch-unsupport
+    mode: batch-request-unsupport, rtidb-batch-unsupport,cli-unsupport
     inputs:
       - columns: [ "id int", "c1 string","c6 double","c7 timestamp" ]
         indexs: [ "index1:c1:c7" ]
