--- a/cases/function/function/test_string.yaml
+++ b/cases/function/function/test_string.yaml
@@ -17,6 +17,7 @@ debugs: []
 cases:
   - id: 0
     desc: "concat_各种类型组合"
+    mode: cli-unsupport
     sqlDialect: ["HybridSQL"]
     inputs:
       -
@@ -112,6 +113,7 @@ cases:
       rows:
         - [1, "aa", "bbb", "aa-bbb-cc"]
   - id: 3
+    mode: cli-unsupport
     desc: "concat_ws-所有类型"
     sqlDialect: ["HybridSQL"]
     inputs:
@@ -238,6 +240,7 @@ cases:
       success: false
   - id: 7
     desc: "substr-normal"
+    mode: cli-unsupport
     inputs:
       -
         columns : ["id bigint","ts1 bigint","c1 string","c2 smallint","c3 int","c4 bigint","c5 float","c6 double","c7 timestamp","c8 date","c9 bool"]
