--- a/cases/plan/error_unsupport_sql.yaml
+++ b/cases/plan/error_unsupport_sql.yaml
@@ -78,9 +78,19 @@ cases:
   - id: group_complex_expression
     desc: SELECT GROUP BY complex expression is unsupport
     sql: SELECT COL1+COL2 FROM t1 group by COL1+COL2;
-  - id: having_clause_not_with_aggregated_query
-    desc: Having clause can't only be used in conjunction with aggregated query
-    sql: SELECT COL1 FROM t1 having SUM(COL1)>1;
-  - id: having_clause_not_functionally_dependent_on_group_by
-    desc: having nonaggregated condition is not functionally dependent on columns in GROUP BY clause
-    sql: SELECT SUM(COL1) FROM t1 GROUP BY COL1 having COL2>1;
+  - id: group_window_clause
+    desc: Can't support group clause and window clause simultaneousl
+    sql: |
+      SELECT COL1 FROM t1 GROUP BY COL1
+      window as w1(partition by col0 order by col5 rows between 100 preceding and current row);
+  - id: having_window_clause
+    desc: Can't support having clause and window clause simultaneously
+    sql: |
+      SELECT COL1 FROM t1 having SUM(COL1)>1
+      window as w1(partition by col0 order by col5 rows between 100 preceding and current row);
+  - id: table_aggregation_and_window_clause
+    desc: Can't support table aggregation and window aggregation simultaneously
+    sql: |
+      SELECT SUM(COL1), SUM(COL) over w1 FROM t1
+      window as w1(partition by col0 order by col5 rows between 100 preceding and current row);
+
