--- a/cases/plan/having_query.yaml
+++ b/cases/plan/having_query.yaml
@@ -16,6 +16,7 @@ cases:
   - id: 1
     desc: 分组聚合后过滤
     sql: SELECT SUM(COL2) as sum_col2 FROM t1 group by col1 having SUM(COL2) > 0;
+    mode: request-unsupport
     expect:
       node_tree_str: |
         +-node[kQuery]: kQuerySelect
@@ -62,6 +63,7 @@ cases:
           +-window_list: []
   - id: 4
     desc: 先过滤再分组聚合再过滤
+    mode: request-unsupport
     sql: SELECT COL1, sum(COL3) as col3sum, * FROM t1 where COL2 > 10 group by COL1 having sum(COL3) > 0;
     expect:
       node_tree_str: |
@@ -132,6 +134,7 @@ cases:
 
   - id: 5
     desc: 先过滤再按两列分组聚合再过滤
+    mode: request-unsupport
     sql: SELECT COL1, COL2, sum(COL3) as col3sum FROM t1 where COL2 > 10 group by COL1, COL2 having sum(COL3) > 0;
     expect:
       node_tree_str: |
@@ -207,6 +210,7 @@ cases:
 
   - id: 6
     desc: 先过滤再分组聚合再过滤再排序
+    mode: request-unsupport
     sql: SELECT COL1, COL2, sum(COL3) as col3sum FROM t1 where col2 > 10 group by COL1, COL2 having sum(COL3) > 0;
     expect:
       node_tree_str: |
