--- a/cases/plan/where_query.yaml
+++ b/cases/plan/where_query.yaml
@@ -15,15 +15,18 @@
 cases:
   - id: 1
     desc: SELECT简单过滤
+    mode: request-unsupport
     sql: SELECT COL1 FROM t1 where COL1 > 10;
   - id: 2
     desc: SELECT过滤条件是逻辑关系表达式
+    mode: request-unsupport
     sql: SELECT COL1 FROM t1 where COL1 > 10 and COL2 = 20 or COL1 =0;
   - id: 3
     desc: SELECT 过滤后统计条数
     sql: SELECT COUNT(COL1) FROM t1 where COL1 > 10 and COL2 = 20;
     mode: physical-plan-unsupport
   - id: 4
+    mode: request-unsupport
     desc: SELECT 过滤后分组聚合条数
     sql: SELECT col1, COUNT(COL1) FROM t1 where COL1 > 10 and COL2 = 20 group by col1;
   - id: 5
@@ -44,21 +47,22 @@ cases:
     mode: physical-plan-unsupport
   - id: 9
     tags: ["TODO", "zetasql-unsupport"]
-    mode: physical-plan-unsupport
+    mode: request-unsupport
     desc: SELECT 过滤条件in整数元组
     sql: SELECT COL1 FROM t1 where COL2 in (1, 2, 3, 4, 5);
   - id: 10
     tags: ["TODO", "zetasql-unsupport"]
-    mode: physical-plan-unsupport
+    mode: request-unsupport
     desc: SELECT 过滤条件in字符串元组
     sql: SELECT COL1 FROM t1 where COL1 in ("abc", "xyz", "test");
   - id: 11
     tags: ["TODO", "zetasql-unsupport"]
-    mode: physical-plan-unsupport
+    mode: request-unsupport
     desc: SELECT 过滤条件NOT IN证书元组
     sql: SELECT COL1 FROM t1 where COL1 not in (1,2,3,4,5);
   - id: 12
     desc: SELECT简单过滤, id=?
+    mode: request-unsupport
     sql: SELECT COL1 FROM t1 where COL1 = ?;
     parameters:
       columns : ["1 int"]
@@ -97,7 +101,7 @@ cases:
 
   - id: 13
     desc: SELECT过滤条件是逻辑关系表达式, 两个占位参数
-    mode: physical-plan-unsupport
+    mode: request-unsupport
     sql: SELECT COL1 FROM t1 where COL1 = ? and COL2 > ? ;
     parameters:
       columns: [ "1 int", "2 bigint"]
@@ -148,6 +152,7 @@ cases:
           +-window_list: []
   - id: 14
     desc: SELECT 过滤后分组聚合条数, 两个占位参数
+    mode: request-unsupport
     sql: SELECT col1, COUNT(COL1) FROM t1 where COL1 = ? and COL2 > ? group by col1;
     parameters:
       columns: [ "1 int", "2 bigint" ]
@@ -212,6 +217,7 @@ cases:
           +-window_list: []
   - id: between_predicate_1
     desc: X between Y and Z
+    mode: request-unsupport
     sql: SELECT col1 FROM t1 WHERE COL1 BETWEEN 1 AND 5;
     expect:
       node_tree_str: |
@@ -252,6 +258,7 @@ cases:
           +-window_list: []
   - id: between_predicate_2
     desc: X NOT BETWEEN Y AND Z
+    mode: request-unsupport
     sql: SELECT col1 FROM t1 WHERE COL1 NOT BETWEEN 1 AND 5;
     expect:
       node_tree_str: |
