--- a/java/openmldb-taskmanager/src/main/resources/taskmanager.properties
+++ b/java/openmldb-taskmanager/src/main/resources/taskmanager.properties
@@ -7,11 +7,14 @@ zookeeper.cluster=172.24.4.55:12200
 zookeeper.root_path=/openmldb
 zookeeper.session_timeout=5000
 
-hive.metastore.endpoint=thrift://m7-pce-dev01.4pd.io:9083
+hive.metastore.endpoint=thrift://127.0.0.1:9083
 
 batchjob.jar.path=hdfs:///Users/tobe/openmldb_batch_files/openmldb-batchjob-1.0-SNAPSHOT.jar
+#batchjob.jar.path=/Users/tobe/code/4pd/OpenMLDB/java/openmldb-batchjob/target/openmldb-batchjob-0.3.0.jar
 
 # Spark Config
-spark.master=yarn
-# spark.yarn.jars=hdfs:///Users/tobe/spark_300_jars/*
-spark.yarn.jars=hdfs:///Users/tobe/openmldb_300_jars/*
+#spark.master=yarn
+spark.master=local
+
+#spark.yarn.jars=hdfs:///Users/tobe/openmldb_300_jars/*
+spark.yarn.jars=
