feat: add spark submit home

--- a/java/openmldb-taskmanager/src/main/resources/taskmanager.properties
+++ b/java/openmldb-taskmanager/src/main/resources/taskmanager.properties
@@ -18,3 +18,6 @@ spark.master=local
 
 #spark.yarn.jars=hdfs:///Users/tobe/openmldb_300_jars/*
 spark.yarn.jars=
+
+#spark.sumbimt.path=/Users/spark
+spark.submit.path=
