--- a/demo/predict-taxi-trip-duration-nb/docker-compose.test.yml
+++ b/demo/predict-taxi-trip-duration-nb/docker-compose.test.yml
@@ -7,6 +7,5 @@ services:
       bash -c "
       sh init.sh && python3 import.py &&
       python3 train.py ./fe.sql /tmp/model.txt &&
-      sh start_predict_server.sh ./fe.sql 8887 /tmp/model.txt &&
+      sh start_predict_server.sh ./fe.sql /tmp/model.txt &&
       python3 predict.py"
-
