--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -4,6 +4,7 @@ on:
   push:
     branches:
       - main
+      - release/*
     tags:
       - v*
   pull_request:
@@ -14,231 +15,9 @@ env:
   HYBRIDSE_SOURCE: local
 
 jobs:
-  build_and_cpp_ut:
-    runs-on: ubuntu-latest
-    container:
-      image: ghcr.io/4paradigm/hybridsql:0.4.0
-    env:
-      OS: linux
-    steps:
-      - uses: actions/checkout@v2
-      - name: build
-        # -e can't catch the error when the command is a part of list-constructs, so we should add `|| exit`
-        run: |
-          bash steps/init_env.sh ${{ env.HYBRIDSE_SOURCE }}
-          if [[ "${{ github.ref }}" == "refs/tags/v"* ]]; then
-            VERSION=$(echo "${{ github.ref }}" | sed -e 's,.*/\(.*\),\1,')
-            VERSION=$(echo $VERSION | sed -e 's/^v//')
-            bash steps/prepare_release.sh $VERSION
-          fi
-          mkdir -p build
-          source /root/.bashrc && cd build && cmake -DSQL_PYSDK_ENABLE=OFF -DSQL_JAVASDK_ENABLE=OFF -DTESTING_ENABLE=ON .. && make -j$(nproc) && cd ../ || exit
-          rm -rf thirdparty
-
-      - name: pack OpenMLDB
-        if: ${{ github.event_name == 'push' }}
-        run: |
-          VERSION="snapshot"
-          if [[ "${{ github.ref }}" == "refs/tags/v"* ]]; then
-            VERSION=$(echo "${{ github.ref }}" | sed -e 's,.*/\(.*\),\1,')
-            VERSION=$(echo $VERSION | sed -e 's/^v//')
-          fi
-          bash steps/package_openmldb.sh $VERSION ${{ env.OS }}
-
-      - name: upload artifacts
-        if: ${{ github.event_name == 'push' }}
-        uses: actions/upload-artifact@v2
-        with:
-          path: openmldb-*.tar.gz
-          name: release-artifacts
-
-      - name: run cpp
-        run: |
-          bash steps/ut.sh
-
-      - name: upload unit test results
-        if: always()
-        uses: actions/upload-artifact@v2
-        with:
-          name: linux-ut-result-cpp-${{ github.sha }}
-          path: |
-            reports/*.xml
-
-  sql_standalone_sdk_test:
-    runs-on: ubuntu-latest
-    container:
-      image: ghcr.io/4paradigm/hybridsql:0.4.0
-    steps:
-      - uses: actions/checkout@v2
-      - name: build
-        run: |
-          bash steps/init_env.sh ${{ env.HYBRIDSE_SOURCE }}
-          mkdir -p build
-          source /root/.bashrc && cd build && cmake -DSQL_PYSDK_ENABLE=OFF -DSQL_JAVASDK_ENABLE=OFF -DTESTING_ENABLE=ON .. && make -j$(nproc) sql_standalone_sdk_test && cd ../ || exit
-      - name: run sql_standalone_sdk_test
-        run: |
-          bash steps/ut.sh sql_standalone_sdk_test 0
-      - name: upload unit test results
-        if: always()
-        uses: actions/upload-artifact@v2
-        with:
-          name: linux-ut-result-cpp-sdk-${{ github.sha }}
-          path: |
-            reports/*.xml
-  sql_sdk_test:
-    runs-on: ubuntu-latest
-    container:
-      image: ghcr.io/4paradigm/hybridsql:0.4.0
-    steps:
-      - uses: actions/checkout@v2
-      - name: build
-        run: |
-          bash steps/init_env.sh ${{ env.HYBRIDSE_SOURCE }}
-          mkdir -p build
-          source /root/.bashrc && cd build && cmake -DSQL_PYSDK_ENABLE=OFF -DSQL_JAVASDK_ENABLE=OFF -DTESTING_ENABLE=ON .. && make -j$(nproc) sql_sdk_test && cd ../ || exit
-      - name: run sql_sdk_test
-        run: |
-          bash steps/ut.sh sql_sdk_test 0
-      - name: upload unit test results
-        if: always()
-        uses: actions/upload-artifact@v2
-        with:
-          name: linux-ut-result-cpp-sdk-${{ github.sha }}
-          path: |
-            reports/*.xml
-
-  sql_cluster_test:
-    runs-on: ubuntu-latest
-    container:
-      image: ghcr.io/4paradigm/hybridsql:0.4.0
-    steps:
-      - uses: actions/checkout@v2
-      - name: build
-        run: |
-          bash steps/init_env.sh ${{ env.HYBRIDSE_SOURCE }}
-          mkdir -p build
-          source /root/.bashrc && cd build && cmake -DSQL_PYSDK_ENABLE=OFF -DSQL_JAVASDK_ENABLE=OFF -DTESTING_ENABLE=ON .. && make -j$(nproc) sql_cluster_test && cd ../ || exit
-      - name: run sql_cluster_test
-        run: |
-          bash steps/ut.sh sql_cluster_test 0
-      - name: upload unit test results
-        if: always()
-        uses: actions/upload-artifact@v2
-        with:
-          name: linux-ut-result-cpp-cluster-${{ github.sha }}
-          path: |
-            reports/*.xml
-
-  java-sdk:
-    runs-on: ubuntu-latest
-    container:
-      image: ghcr.io/4paradigm/hybridsql:0.4.0
-    steps:
-      - uses: actions/checkout@v2
-
-      - name: build jsdk and package
-        run: |
-          bash steps/init_env.sh ${{ env.HYBRIDSE_SOURCE }}
-          mkdir -p build
-          source /root/.bashrc && cd build && cmake -DSQL_PYSDK_ENABLE=OFF -DSQL_JAVASDK_ENABLE=ON -DTESTING_ENABLE=OFF .. && make -j$(nproc) sql_javasdk_package openmldb && cd ../ || exit
-      - name: run java modules smoke test
-        run: |
-          sh steps/ut_zookeeper.sh start
-          cd onebox && sh start_onebox.sh && cd - || exit
-          cd java
-          mvn test
-          cd -
-          cd onebox && sh stop_all.sh && cd - || exit
-          sh steps/ut_zookeeper.sh stop
-
-      - name: upload java ut results
-        if: always()
-        uses: actions/upload-artifact@v2
-        with:
-          name: linux-ut-result-java-${{ github.sha }}
-          path: |
-            java/openmldb-jdbc/target/**/TEST-*.xml
-
-  python-sdk:
-    runs-on: ubuntu-latest
-    container:
-      image: ghcr.io/4paradigm/hybridsql:0.4.0
-    steps:
-      - uses: actions/checkout@v2
-      - name: build pysdk and sqlalchemy
-        run: |
-          bash steps/init_env.sh ${{ env.HYBRIDSE_SOURCE }}
-          if [[ "${{ github.ref }}" == "refs/tags/v"* ]]; then
-            VERSION=$(echo "${{ github.ref }}" | sed -e 's,.*/\(.*\),\1,')
-            VERSION=$(echo $VERSION | sed -e 's/^v//')
-            bash steps/prepare_release.sh $VERSION
-          fi
-          mkdir -p build
-          source /root/.bashrc && cd build && cmake -DSQL_PYSDK_ENABLE=ON -DSQL_JAVASDK_ENABLE=OFF -DTESTING_ENABLE=OFF .. && make -j$(nproc) sqlalchemy_openmldb openmldb && cd ../ || exit
-      - name: test sqlalchemy
-        run: |
-          python3 -m easy_install nose pip
-          yum install -y net-tools
-          bash steps/fesql_test_python.sh
-      - name: upload python ut results
-        if: always()
-        uses: actions/upload-artifact@v2
-        with:
-          name: linux-ut-result-python-${{ github.sha }}
-          path: |
-            python/test/nosetests.xml
-      - name: upload pysdk and whl
-        if: ${{ github.event_name == 'push' }}
-        uses: actions/upload-artifact@v2
-        with:
-          path: |
-            build/python/dist/openmldb*.whl
-          name: python-artifacts
-
-  publish-test-results:
-    runs-on: ubuntu-latest
-    needs: [ "build_and_cpp_ut", "sql_sdk_test", "sql_cluster_test", "java-sdk", "python-sdk" ]
-
-    # the action will only run on 4paradigm/OpenMLDB's context, not for fork repo or dependabot
-    if: >
-      always() && github.event_name == 'push' || (
-      github.event.pull_request.head.repo.full_name == github.repository &&
-      github.event.sender.login != 'dependabot[bot]' )
-    steps:
-      - name: Download Artifacts
-        uses: actions/download-artifact@v2
-
-      - name: Publish Linux UT Results
-        uses: EnricoMi/publish-unit-test-result-action@v1
-        with:
-          files: linux-ut-result-*/**/*.xml
-          check_name: Linux Test Report
-          comment_title: Linux Test Report
-
-  release:
-    runs-on: ubuntu-latest
-    # if test failed, shouldn't release
-    needs: [ "build_and_cpp_ut", "sql_sdk_test", "sql_cluster_test", "java-sdk", "python-sdk" ]
-    if: >
-      success() && startsWith(github.ref, 'refs/tags/v')
-    steps:
-      - name: Download Release Artifacts
-        uses: actions/download-artifact@v2
-        with:
-          name: release-artifacts
-      - name: Release
-        if: ${{ startsWith(github.ref, 'refs/tags/v') }}
-        uses: softprops/action-gh-release@v1
-        with:
-          files: |
-            openmldb-*.tar.gz
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
   # only tag deploy, only run on 4paradigm/OpenMLDB's context?
   java-sdk-deploy:
     runs-on: ubuntu-latest
-    needs: [ "build_and_cpp_ut", "sql_sdk_test", "sql_cluster_test", "java-sdk", "python-sdk" ]
     container:
       image: ghcr.io/4paradigm/hybridsql:0.4.0
     # java deploy is triggered with a push to main or a tag push
@@ -268,9 +47,7 @@ jobs:
       - name: upload to maven
         run: |
           bash steps/init_env.sh ${{ env.HYBRIDSE_SOURCE }}
-          VERSION=$(echo "${{ github.ref }}" | sed -e 's,.*/\(.*\),\1,')
-          VERSION=$(echo "$VERSION" | sed -e 's/^v//')
-          ./steps/package_openmldb_javasdk.sh "$VERSION"
+          ./steps/package_openmldb_javasdk.sh "0.3.2"
         env:
           # do not set user.home on macos
           MAVEN_OPTS: -Duser.home=/github/home
@@ -280,8 +57,6 @@ jobs:
 
   java-sdk-deploy-mac:
     runs-on: macos-latest
-    # TODO(hw): needs ut on mac
-    needs: [ "build_and_cpp_ut", "sql_sdk_test", "sql_cluster_test", "java-sdk", "python-sdk" ]
     # java deploy is triggered with a push to main or a tag push
     # a 'vX.Y.Z' tag push will deploy a release version to maven central,
     # any other push will deploy a SNAPSHOT version.
@@ -309,38 +84,9 @@ jobs:
       - name: upload to maven
         run: |
           bash steps/init_env.sh ${{ env.HYBRIDSE_SOURCE }}
-          VERSION=$(echo "${{ github.ref }}" | sed -e 's,.*/\(.*\),\1,')
-          VERSION=$(echo "$VERSION" | sed -e 's/^v//')
-          ./steps/package_openmldb_javasdk.sh "$VERSION"
+          ./steps/package_openmldb_javasdk.sh "0.3.2"
         env:
           MAVEN_USERNAME: ${{ secrets.OSSRH_USERNAME }}
           MAVEN_TOKEN: ${{ secrets.OSSRH_TOKEN }}
           GPG_PASSPHRASE: ${{ secrets.GPG_PASSPHRASE }}
 
-  python-sdk-deploy:
-    runs-on: ubuntu-latest
-    needs: [ "build_and_cpp_ut", "sql_sdk_test", "sql_cluster_test", "java-sdk", "python-sdk" ]
-    if: >
-      success() && startsWith(github.ref, 'refs/tags/v')
-    steps:
-      - uses: actions/checkout@v2
-      - name: Set up Python
-        uses: actions/setup-python@v2
-        with:
-          python-version: '3.x'
-      - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install setuptools wheel twine
-      - name: Download Release Artifacts
-        uses: actions/download-artifact@v2
-        with:
-          name: python-artifacts
-      # download only one file, so no dir, just openmldb-*.whl
-      - name: upload to pypi
-        env:
-          TWINE_USERNAME: ${{ secrets.PYPI_USERNAME }}
-          TWINE_PASSWORD: ${{ secrets.PYPI_PASSWORD }}
-        run: |
-          ls
-          twine upload openmldb-*.whl
