fix: fix spark home

--- a/java/openmldb-taskmanager/src/main/resources/taskmanager.properties
+++ b/java/openmldb-taskmanager/src/main/resources/taskmanager.properties
@@ -19,5 +19,5 @@ spark.master=local
 #spark.yarn.jars=hdfs:///Users/tobe/openmldb_300_jars/*
 spark.yarn.jars=
 
-#spark.sumbimt.path=/Users/spark
-spark.submit.path=
+#spark.home=/Users/spark
+spark.home=
