--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -25,13 +25,15 @@ jobs:
         run: |
           make thirdparty
 
+      - name: prepare release
+        if: startsWith(github.ref, 'refs/tags/v')
+        run: |
+            VERSION=$(echo "${{ github.ref }}" | sed -e 's,.*/\(.*\),\1,')
+            VERSION=${VERSION#v}
+            bash steps/prepare_release.sh "$VERSION"
+
       - name: build
         run: |
-          if [[ "${{ github.ref }}" == "refs/tags/v"* ]]; then
-            VERSION=$(echo "${{ github.ref }}" | sed -e 's,.*/\(.*\),\1,')
-            VERSION=$(echo $VERSION | sed -e 's/^v//')
-            bash steps/prepare_release.sh $VERSION
-          fi
           make build SQL_PYSDK_ENABLE=OFF SQL_JAVASDK_ENABLE=OFF TESTING_ENABLE=ON
           # GitHub runner disk space is limited
           # delete thirdparty build directory($ROOT/.deps/) to save disk space
@@ -41,11 +43,11 @@ jobs:
         if: ${{ github.event_name == 'push' }}
         run: |
           VERSION="snapshot"
-          if [[ "${{ github.ref }}" == "refs/tags/v"* ]]; then
+          if [[ ${{ github.ref }} == "refs/tags/v"* ]]; then
             VERSION=$(echo "${{ github.ref }}" | sed -e 's,.*/\(.*\),\1,')
-            VERSION=$(echo $VERSION | sed -e 's/^v//')
+            VERSION=${VERSION#v}
           fi
-          bash steps/package_openmldb.sh $VERSION ${{ env.OS }}
+          bash steps/package_openmldb.sh "$VERSION" ${{ env.OS }}
 
       - name: upload artifacts
         if: ${{ github.event_name == 'push' }}
@@ -56,7 +58,7 @@ jobs:
 
       - name: run cpp
         run: |
-          bash steps/ut.sh
+          make test
 
       - name: upload unit test results
         if: always()
@@ -66,62 +68,38 @@ jobs:
           path: |
             reports/*.xml
 
-  sql_standalone_sdk_test:
+  sql_mode_sdk_test:
     runs-on: ubuntu-latest
     container:
       image: ghcr.io/4paradigm/hybridsql:0.4.0
-    steps:
-      - uses: actions/checkout@v2
-      - name: build
-        run: |
-          bash steps/init_env.sh ${{ env.HYBRIDSE_SOURCE }}
-          mkdir -p build
-          source /root/.bashrc && cd build && cmake -DSQL_PYSDK_ENABLE=OFF -DSQL_JAVASDK_ENABLE=OFF -DTESTING_ENABLE=ON .. && make -j$(nproc) sql_standalone_sdk_test && cd ../ || exit
-      - name: run sql_standalone_sdk_test
-        run: |
-          bash steps/ut.sh sql_standalone_sdk_test 0
-      - name: upload unit test results
-        if: always()
-        uses: actions/upload-artifact@v2
-        with:
-          name: linux-ut-result-cpp-sdk-${{ github.sha }}
-          path: |
-            reports/*.xml
-  sql_sdk_test:
-    runs-on: ubuntu-latest
-    container:
-      image: ghcr.io/4paradigm/hybridsql:0.4.0
+    strategy:
+      fail-fast: true
+      matrix:
+        test_target:
+          - sql_standalone_sdk_test
+          - sql_sdk_test
+          - sql_cluster_test
+    env:
+      OPENMLDB_BUILD_TARGE: ${{ matrix.test_target }}
+      TEST_TARGET: ${{ matrix.test_target }}
+      TESTING_ENABLE: ON
+      TEST_LEVEL: 0
     steps:
       - uses: actions/checkout@v2
 
-      - name: run sql_sdk_test
+      - name: configure and build
         run: |
-          make sdktest SQL_PYSDK_ENABLE=OFF SQL_JAVASDK_ENABLE=OFF TESTING_ENABLE=ON
+          make build
+
+      - name: run test ${{ matrix.test_target }}
+        run: |
+          make test
 
       - name: upload unit test results
         if: always()
         uses: actions/upload-artifact@v2
         with:
-          name: linux-ut-result-cpp-sdk-${{ github.sha }}
-          path: |
-            reports/*.xml
-
-  sql_cluster_test:
-    runs-on: ubuntu-latest
-    container:
-      image: ghcr.io/4paradigm/hybridsql:0.4.0
-    steps:
-      - uses: actions/checkout@v2
-
-      - name: run sql_cluster_test
-        run: |
-          make clustertest SQL_PYSDK_ENABLE=OFF SQL_JAVASDK_ENABLE=OFF TESTING_ENABLE=ON
-
-      - name: upload unit test results
-        if: always()
-        uses: actions/upload-artifact@v2
-        with:
-          name: linux-ut-result-cpp-cluster-${{ github.sha }}
+          name: linux-ut-result-${{ env.TEST_TARGET }}-${{ github.sha }}
           path: |
             reports/*.xml
 
@@ -129,12 +107,14 @@ jobs:
     runs-on: ubuntu-latest
     container:
       image: ghcr.io/4paradigm/hybridsql:0.4.0
+    env:
+      SQL_JAVASDK_ENABLE: ON
     steps:
       - uses: actions/checkout@v2
 
       - name: build jsdk and package
         run: |
-          make javasdk SQL_PYSDK_ENABLE=OFF SQL_JAVASDK_ENABLE=ON TESTING_ENABLE=OFF
+          make build
 
       - name: run java modules smoke test
         run: |
@@ -158,21 +138,22 @@ jobs:
     runs-on: ubuntu-latest
     container:
       image: ghcr.io/4paradigm/hybridsql:0.4.0
+    env:
+      SQL_PYSDK_ENABLE: ON
     steps:
       - uses: actions/checkout@v2
+
       - name: build pysdk and sqlalchemy
+
         run: |
-          if [[ "${{ github.ref }}" == "refs/tags/v"* ]]; then
-            VERSION=$(echo "${{ github.ref }}" | sed -e 's,.*/\(.*\),\1,')
-            VERSION=$(echo $VERSION | sed -e 's/^v//')
-            bash steps/prepare_release.sh $VERSION
-          fi
-          make pythonsdk SQL_PYSDK_ENABLE=ON SQL_JAVASDK_ENABLE=OFF TESTING_ENABLE=OFF
+          make build
+
       - name: test sqlalchemy
         run: |
           python3 -m easy_install nose pip
           yum install -y net-tools
           bash steps/fesql_test_python.sh
+
       - name: upload python ut results
         if: always()
         uses: actions/upload-artifact@v2
@@ -180,6 +161,7 @@ jobs:
           name: linux-ut-result-python-${{ github.sha }}
           path: |
             python/test/nosetests.xml
+
       - name: upload pysdk and whl
         if: ${{ github.event_name == 'push' }}
         uses: actions/upload-artifact@v2
@@ -190,7 +172,7 @@ jobs:
 
   publish-test-results:
     runs-on: ubuntu-latest
-    needs: [ "build_and_cpp_ut", "sql_sdk_test", "sql_cluster_test", "java-sdk", "python-sdk" ]
+    needs: [ "build_and_cpp_ut", "sql_mode_sdk_test", "java-sdk", "python-sdk" ]
 
     # the action will only run on 4paradigm/OpenMLDB's context, not for fork repo or dependabot
     if: >
@@ -211,7 +193,7 @@ jobs:
   release:
     runs-on: ubuntu-latest
     # if test failed, shouldn't release
-    needs: [ "build_and_cpp_ut", "sql_sdk_test", "sql_cluster_test", "java-sdk", "python-sdk" ]
+    needs: [ "build_and_cpp_ut", "sql_mode_sdk_test", "java-sdk", "python-sdk" ]
     if: >
       success() && startsWith(github.ref, 'refs/tags/v')
     steps:
@@ -231,7 +213,7 @@ jobs:
   # only tag deploy, only run on 4paradigm/OpenMLDB's context?
   java-sdk-deploy:
     runs-on: ubuntu-latest
-    needs: [ "build_and_cpp_ut", "sql_sdk_test", "sql_cluster_test", "java-sdk", "python-sdk" ]
+    needs: [ "build_and_cpp_ut", "sql_mode_sdk_test", "java-sdk", "python-sdk" ]
     container:
       image: ghcr.io/4paradigm/hybridsql:0.4.0
     # java deploy is triggered with a push to main or a tag push
@@ -240,6 +222,8 @@ jobs:
     # see more in 'steps/package_openmldb_javasdk.sh'
     if: >
       success() && github.event_name == 'push'
+    env:
+      SQL_JAVASDK_ENABLE: ON
     steps:
       - uses: actions/checkout@v2
 
@@ -262,7 +246,7 @@ jobs:
         run: |
           make thirdparty
           VERSION=$(echo "${{ github.ref }}" | sed -e 's,.*/\(.*\),\1,')
-          VERSION=$(echo "$VERSION" | sed -e 's/^v//')
+          VERSION=${VERSION#v}
           ./steps/package_openmldb_javasdk.sh "$VERSION"
         env:
           # do not set user.home on macos
@@ -274,13 +258,15 @@ jobs:
   java-sdk-deploy-mac:
     runs-on: macos-latest
     # TODO(hw): needs ut on mac
-    needs: [ "build_and_cpp_ut", "sql_sdk_test", "sql_cluster_test", "java-sdk", "python-sdk" ]
+    needs: [ "build_and_cpp_ut", "sql_mode_sdk_test", "java-sdk", "python-sdk" ]
     # java deploy is triggered with a push to main or a tag push
     # a 'vX.Y.Z' tag push will deploy a release version to maven central,
     # any other push will deploy a SNAPSHOT version.
     # see more in 'steps/package_openmldb_javasdk.sh'
     if: >
       success() && github.event_name == 'push'
+    env:
+      SQL_JAVASDK_ENABLE: ON
     steps:
       - uses: actions/checkout@v2
 
@@ -303,7 +289,7 @@ jobs:
         run: |
           make thirdparty
           VERSION=$(echo "${{ github.ref }}" | sed -e 's,.*/\(.*\),\1,')
-          VERSION=$(echo "$VERSION" | sed -e 's/^v//')
+          VERSION=${VERSION#v}
           ./steps/package_openmldb_javasdk.sh "$VERSION"
         env:
           MAVEN_USERNAME: ${{ secrets.OSSRH_USERNAME }}
@@ -312,7 +298,7 @@ jobs:
 
   python-sdk-deploy:
     runs-on: ubuntu-latest
-    needs: [ "build_and_cpp_ut", "sql_sdk_test", "sql_cluster_test", "java-sdk", "python-sdk" ]
+    needs: [ "build_and_cpp_ut", "sql_mode_sdk_test", "java-sdk", "python-sdk" ]
     if: >
       success() && startsWith(github.ref, 'refs/tags/v')
     steps:
