--- a/java/openmldb-taskmanager/src/test/resources/taskmanager.properties
+++ b/java/openmldb-taskmanager/src/test/resources/taskmanager.properties
@@ -9,7 +9,7 @@ zookeeper.session_timeout=5000
 
 hive.metastore.endpoint=thrift://127.0.0.1:9083
 
-batchjob.jar.path="spark-internal"
+batchjob.jar.path=
 
 # Spark Config
 spark.master=local
